--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,5 +1,8 @@
 {
   "settings": {
+    "apiToUse": "Kies de gewenste API(s)",
+    "appid": "Official api acces id",
+    "appsecret": "Official api acces secret",
     "username": "Gebruikersnaam",
     "title": "Tuya cloud instellingen",
     "authentication": "Authenticatie instellingen",
