--- a/locales/en.json
+++ b/locales/en.json
@@ -1,7 +1,7 @@
 {
   "settings": {
     "apiToUse": "Choose desired api(s)",
-    "appid": "Official api acces id",
+    "appid": "Official api acces id, for more information: ",
     "appsecret": "Official api acces secret",
     "username": "Username",
     "title": "Tuya cloud Settings",
@@ -14,6 +14,9 @@
     "save": "Save",
     "reconnect": "Reconnect",
     "saved": "Settings saved, restart the app to connect again.",
-    "isrequired": "is required"
+    "isrequired": "is required",
+    "message":"Last connection message",
+    "refreshScenes":"Refresh scenes",
+    "scenesRefreshed":"Scenes are refreshed"
   }
 }
