--- a/locales/nl.json
+++ b/locales/nl.json
@@ -2,7 +2,7 @@
   "settings": {
     "apiToUse": "Kies de gewenste API(s)",
     "appid": "Official api acces id",
-    "appsecret": "Official api acces secret",
+    "appsecret": "Official api acces secret, voor meer informatie: ",
     "username": "Gebruikersnaam",
     "title": "Tuya cloud instellingen",
     "authentication": "Authenticatie instellingen",
@@ -14,6 +14,9 @@
     "save": "Opslaan",
     "reconnect": "Opnieuw verbinden",
     "saved": "Instellingen opgeslagen, herstart de app om actief te maken",
-    "isrequired": "is verplicht"
+    "isrequired": "is verplicht",
+    "message":"Laatste connectie bericht",
+    "refreshScenes":"Herlaad scenes",
+    "scenesRefreshed":"Scenes zijn opnieuw geladen"
   }
 }
