--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,8 +1,8 @@
 {
   "settings": {
     "apiToUse": "Kies de gewenste API(s)",
-    "appid": "Official api acces id",
-    "appsecret": "Official api acces secret, voor meer informatie: ",
+    "appid": "Official api acces id, voor meer informatie: ",
+    "appsecret": "Official api acces secret",
     "username": "Gebruikersnaam",
     "title": "Tuya cloud instellingen",
     "authentication": "Authenticatie instellingen",
